--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -88,6 +88,7 @@
   margin-right: 20px;
   
 }
+
 .user-icon{
   border:rgb(216, 213, 207) 2px solid;
   border-radius: 50%;
@@ -131,6 +132,32 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+
+.uppter-courses-container{
+margin-top: 30px;
+}
+.courses-container {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  flex-wrap: wrap;
+}
+
+.courses-container > * {
+  margin-left: 20px; /* Adds margin to all elements */
+}
+
+
+
+
+
+
+
+
+
+
 
 /* Footer */
 .footer {
