--- a/Client/src/Components/Stylesheets/Contactus.css
+++ b/Client/src/Components/Stylesheets/Contactus.css
@@ -2,9 +2,9 @@
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    margin-left: 15%;
+    margin-left: 10%;
     margin-top: 20px;
-    font-family: "Source Serif Pro", Sans-serif;
+    font-family: "Source Serif Pro", sans-serif;
   }
   
   .contact-form-container {
@@ -18,17 +18,24 @@
   .send-msg-heading {
     color: #0f5285;
     margin: 0 0 40px 0;
-    margin-left: 25%
+    margin-left: 25%;
   }
-  .contact-info h3 {
   
+  .contact-info h3 {
     color: #0f5285;
     display: flex;
     align-items: center;
   }
   
+  .contact-info h4 {
+    color: #0f5285;
+    font-family: "Source Serif Pro", sans-serif;
+    font-size: 25px;
+    margin-top: 15px;
+  }
+  
   .contactus-heading {
-    color: #e5e8ea;
+    color: #0f5285;
     margin: 0 0 30px 0;
     margin-left: 25%;
   }
@@ -54,7 +61,7 @@
   
   .contact-form-group textarea {
     height: 100px;
-    resize: vertical;
+    resize: none; /* Prevent resizing */
   }
   
   .contact-submit-button {
@@ -63,10 +70,9 @@
     background-color: #007bff;
     color: white;
     border: none;
-    border-radius: 10px;
+    border-radius: 20px;
     cursor: pointer;
     font-size: 14px;
-    margin-top: 10px;
   }
   
   .contact-submit-button:hover {
@@ -77,7 +83,6 @@
     margin-bottom: 20px;
   }
   
- 
   .contact-info p {
     margin: 5px 0;
   }
@@ -85,6 +90,6 @@
   .contact-info svg {
     margin-right: 8px;
     vertical-align: middle;
-    color: #25d366;
+    color: #25d3d3;
   }
   
