--- a/Client/src/Components/Stylesheets/Courses.css
+++ b/Client/src/Components/Stylesheets/Courses.css
@@ -1,35 +1,36 @@
 .card-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 30px;
     padding: 0 20px;
+    justify-content: flex-start; /* Ensure cards are aligned to the start */
   }
   
   .card {
-    flex: 1 1 calc(25% - 20px); /* Adjust width to 25% minus gap */
+    flex: 0 1 calc(25% - 30px); /* Fix width to 25% minus gap */
     box-sizing: border-box;
     height: 200px; 
   }
   
   @media (max-width: 1200px) {
     .card {
-      flex: 1 1 calc(33.33% - 20px); /* Adjust width for smaller screens */
+      flex: 0 1 calc(33.33% - 30px); /* Adjust width for smaller screens */
     }
   }
   
   @media (max-width: 800px) {
     .card {
-      flex: 1 1 calc(50% - 20px); /* Adjust width for smaller screens */
+      flex: 0 1 calc(50% - 30px); /* Adjust width for smaller screens */
     }
   }
   
   @media (max-width: 600px) {
     .card {
-      flex: 1 1 calc(100% - 20px); /* Adjust width for smallest screens */
+      flex: 0 1 calc(100% - 30px); /* Adjust width for smallest screens */
     }
   }
   
-  .heading-4{
+  .heading-4 {
     padding: 20px;
-
   }
+  
