--- a/Client/src/Components/Stylesheets/Aboutus.css
+++ b/Client/src/Components/Stylesheets/Aboutus.css
@@ -1,40 +1,81 @@
 .aboutus-container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-  }
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.slogan-section {
+  text-align: center;
+  margin-bottom: 40px;
+  margin-top: 20px;
+}
+
+.aboutus-section {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 60px;
+}
+
+.aboutus-left, .aboutus-right {
+  flex: 1 1 100%;
+  padding: 20px;
+}
+
+.aboutus-left-img, .aboutus-right-img {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto;
+  display: block;
+}
+
+.aboutus-section h3 {
+  color: #0f5285;
   
-  .slogan-section {
-    text-align: center;
-    margin-bottom: 40px;
-  }
-  
+}
+
+.aboutus-section p {
+  line-height: 1.6;
+  text-align: justify;
+  margin: 0 auto;
+  width: 80%;
+}
+
+.thought-section {
+  background-color: #f0f0f0; /* Different background color */
+  padding: 80px 60px;
+  text-align: center;
+  height: 300px;
+ 
+  margin-top: 40px;
+}
+
+.thought-section p {
+  font-size: 1.2em;
+  line-height: 1.6;
+  margin: 0;
+}
+
+/* Responsive Styles */
+@media (min-width: 768px) {
   .aboutus-section {
-    display: flex;
-    margin-bottom: 40px;
+    flex-wrap: nowrap;
   }
-  
-  .aboutus-left {
+
+  .aboutus-left, .aboutus-right {
     flex: 1;
-    padding-right: 20px;
   }
-  
-  .aboutus-right {
-    flex: 1;
-    padding-left: 20px;
+
+  .aboutus-left-img, .aboutus-right-img {
+    width: 80%;
+    height: 350px;
   }
-  
-  .aboutus-right img {
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-  }
-  
+
   .aboutus-section h3 {
-    color: #0f5285;
+    margin-left: 30px;
   }
-  
+
   .aboutus-section p {
-    line-height: 1.6;
+    margin-left: 30px;
   }
-  
+}
