--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -150,73 +150,11 @@ margin-top: 30px;
 }
 
 
-/* Footer */
-.footer {
-  background-color: #f1f1f1;
-  padding: 20px;
-}
-
-.footer-col-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.footer-column {
-  flex: 1;
-  margin: 10px;
-  min-width: 200px; /* Ensure columns have a minimum width */
-}
-
-.footer-column h3 {
-  margin-bottom: 10px;
-}
-
-.footer-column ul {
-  list-style-type: none; /* Removes default bullet points */
-  padding: 0; /* Removes default padding */
-  margin: 0; /* Removes default margin */
-}
-
-.footer-column ul li {
-  margin-bottom: 5px;
-}
-
-.social-icons {
-  display: flex;
-  gap: 10px;
-}
-
-.Copyright-section {
-  text-align: center;
-  margin-top: 20px;
-  border-top: 2px solid rgb(105, 199, 199);
-  padding-top: 10px;
-}
-
-.copyright {
-  margin-top: 15px;
-}
-
-.website-name {
-  color: rgb(20, 78, 101);
-  font-weight: bold;
-}
-
-@media (max-width: 992px) {
-  .footer-col-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .footer-column {
-    margin: 10px 0;
-  }
-}
+/* Navbar End */
 
 
-/*-------------------------------------Login css --------------------------------------------*/
+
+
 
 
 
@@ -293,5 +231,73 @@ margin-top: 30px;
 
 
 
-/* Contactus css */
+/* Footer */
+
+.footer {
+  background-color: #f1f1f1;
+  padding: 20px;
+}
+
+.footer-col-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.footer-column {
+  flex: 1;
+  margin: 10px;
+  min-width: 200px; /* Ensure columns have a minimum width */
+}
+
+.footer-column h3 {
+  margin-bottom: 10px;
+}
+
+.footer-column ul {
+  list-style-type: none; /* Removes default bullet points */
+  padding: 0; /* Removes default padding */
+  margin: 0; /* Removes default margin */
+}
+
+.footer-column ul li {
+  margin-bottom: 5px;
+}
+
+.social-icons {
+  display: flex;
+  gap: 10px;
+}
+
+.Copyright-section {
+  text-align: center;
+  margin-top: 20px;
+  border-top: 2px solid rgb(105, 199, 199);
+  padding-top: 10px;
+}
+
+.copyright {
+  margin-top: 15px;
+}
+
+.website-name {
+  color: rgb(20, 78, 101);
+  font-weight: bold;
+}
+
+@media (max-width: 992px) {
+  .footer-col-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-column {
+    margin: 10px 0;
+  }
+}
+
+
+
+/* footer end*/
 
