--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -462,6 +462,34 @@
   }
 }
 
+.footer-list-item {
+  position: relative;
+  padding-left: 20px;
+}
+
+.footer-list-item:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 10px;
+  width: 10px;
+  height: 10px;
+  background-color: #337ab7;
+  border-radius: 50%;
+  margin-top: -5px; /* adjust the vertical alignment */
+}
+
+.footer-list-item:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 10px;
+  width: 10px;
+  height: 10px;
+  background-color: #337ab7;
+  border-radius: 50%;
+}
+
 
 
 
