--- a/Client/src/Components/Stylesheets/courseinfo.css
+++ b/Client/src/Components/Stylesheets/courseinfo.css
@@ -27,11 +27,15 @@
 
 .course-image {
   margin-bottom: 20px;
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
 }
 
 .course-image img {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
