--- a/Client/src/Components/Stylesheets/Courses.css
+++ b/Client/src/Components/Stylesheets/Courses.css
@@ -2,6 +2,7 @@
   padding: 10px;
   text-align: center;
 }
+
 .categories-container {
   display: flex;
   justify-content: center;
@@ -11,27 +12,15 @@
 .category-button {
   padding: 10px 20px;
   margin: 0 10px;
-  background-color: #f0f0f0;
-  color: #333;
-  border: 2px solid transparent;
+  background-color: #337ab7;
+  color: white;
+  border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
 }
 
-.category-button:hover {
-  background-color: #e0e0e0;
-}
-
-.category-button.active {
-  background-color: #007bff;
-  color: #fff;
-  border-color: #007bff;
-}
-
-.category-button.active:hover {
+.category-button.active, .category-button:hover {
   background-color: #0056b3;
-  border-color: #0056b3;
 }
 
 .card-container {
