--- a/Client/src/Components/Stylesheets/Courses.css
+++ b/Client/src/Components/Stylesheets/Courses.css
@@ -24,17 +24,21 @@
 }
 
 .card-container {
+  margin-left: 50px;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
 }
 
 .card {
-  width: 20%;
+  width: 21%;
   margin: 20px;
   display: inline-block;
   background-color: rgb(243, 239, 244);
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card-img-wrapper {
@@ -52,6 +56,7 @@
 
 .card-body {
   padding: 30px;
+  flex-grow: 1;
 }
 
 .card-title {
@@ -64,6 +69,13 @@
   font-size: 14px;
   color: #666;
   margin-bottom: 20px;
+}
+
+.card-footer {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn-primary {
