--- a/Client/src/Components/Stylesheets/AccountSetting.css
+++ b/Client/src/Components/Stylesheets/AccountSetting.css
@@ -35,7 +35,7 @@
     margin-bottom: 20px;
 }
 
-form {
+.Account-form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,7 +71,7 @@ input[type="password"] {
 button[type="submit"] {
     padding: 10px 20px;
     border: none;
-    background-color: #333;
+    background-color: #092fb7;
     color: #fff;
     font-size: 16px;
     border-radius: 4px;
