--- a/Client/src/Components/AdminPanel/AdminPanel.css
+++ b/Client/src/Components/AdminPanel/AdminPanel.css
@@ -174,5 +174,38 @@
     margin-bottom: 10px;
     border-radius: 5px;
     border: 1px solid #ddd;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .admin-panel-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 1rem;
+    color: #fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 4px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .admin-panel-button:hover {
+    background-color: #0056b3;
+  }
+  
+  .admin-panel-delete-button {
+    background-color: #dc3545;
+    color: #fff;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .admin-panel-delete-button:hover {
+    background-color: #c82333;
   }
   
