added admin baner

--- a/Client/src/Components/AdminPanel/AdminPanel.css
+++ b/Client/src/Components/AdminPanel/AdminPanel.css
@@ -209,3 +209,10 @@
     background-color: #c82333;
   }
   
+
+  .admin-panel-adminbaner-h2{
+    color: #9f18c9;
+    font-size: 30px;
+
+    margin-top: 20px;
+  }
