--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -517,3 +517,148 @@
 
 /* footer end*/
 
+
+
+/* forgot password page  */
+.forgotpass-container {
+  width: 400px;
+  min-height: 300px;
+  margin: 0 auto;
+  margin-top: 40px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.forgotpass-form-container {
+  text-align: center;
+  margin: 10px;
+}
+
+.forgotpass-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ 
+}
+
+.forgotpass-form-group {
+  margin-bottom: 15px;
+  width: 100%;
+}
+
+.forgotpass-form-group label {
+  display: block;
+  margin-bottom: 5px;
+  text-align: left;
+}
+
+.forgotpass-form-group input {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+}
+
+.forgotpass-button {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.forgotpass-button:hover {
+  background-color: #0056b3;
+}
+
+.forgotpass-success-message {
+  color: green;
+  text-align: center;
+}
+
+.forgotpass-error-message {
+  color: red;
+  text-align: center;
+}
+
+.forgotpass-login-redirect {
+  margin-top: 15px;
+}
+
+.forgotpass-login-link {
+  background: none;
+  border: none;
+  color: #007bff;
+  cursor: pointer;
+  text-decoration: underline;
+  padding: 0;
+}
+
+.forgotpass-login-link:hover {
+  color: #0056b3;
+}
+/* forgot password end */
+
+
+/*  Reset password  */
+/* src/components/ResetPasswordWithOTP.css */
+.reset-password-container {
+  max-width: 400px;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+}
+
+.reset-password-header {
+  margin-bottom: 20px;
+}
+
+.reset-password-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.reset-password-form-group {
+  margin-bottom: 15px;
+}
+
+.reset-password-form-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.reset-password-form-group input {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.reset-password-button {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  background-color: #007bff;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.reset-password-button:hover {
+  background-color: #0056b3;
+}
+
+.reset-password-success-message {
+  color: #28a745;
+}
+
+.reset-password-error-message {
+  color: #dc3545;
+}
+
+
+/* reset password end */
