--- a/Client/src/Components/Stylesheets/Appinfo.css
+++ b/Client/src/Components/Stylesheets/Appinfo.css
@@ -1,3 +1,4 @@
+
 .app-info {
     width: 72%;
     margin: 40px auto;
@@ -51,9 +52,11 @@
   }
   
   .app-content ul {
-    list-style: none;
+    /* list-style: none; */
     padding: 0;
     margin: 0;
+    margin-left: 15px;
+    
   }
   
   
@@ -61,13 +64,10 @@
     margin-bottom: 10px;
     font-size: 16px;
     color: #666;
+    
   }
   
-  .app-content li i {
-    font-size: 18px;
-    color: #337ab7;
-    margin-right: 10px;
-  }
+
   
   .app-store-buttons {
     margin-top: 20px;
@@ -77,12 +77,7 @@
   .app-store-buttons a {
     margin: 0 10px;
   }
-  
-  /* .app-store-buttons img {
-    height: 40px;
-    width: auto;
-    margin: 0 10px;
-  } */
+
  .Android-play-store{
   height: 60px;
   width: auto;
@@ -105,36 +100,92 @@
     width: 100%;
     height: auto;
   }
-  
-  /* Tablet styles (max-width: 768px) */
-  @media (max-width: 768px) {
-    .app-info {
-      flex-direction: column;
-      align-items: center;
-      width: 90%;
-    }
-    .app-images, .app-content {
-      max-width: 100%;
-      margin: 10px 0;
-    }
-    .app-store-logo {
-      width: 30%;
-      margin: 10px 0;
-    }
+  .fas.fa-star {
+    color: #FFD700; /* Gold color for the stars */
+    margin-right: 8px;
   }
   
+  /* Tablet styles (max-width: 768px) */
+@media (max-width: 768px) {
+  .app-info {
+    flex-direction: row;
+    width: 100%;
+    height: 60%;
+  }
+  .app-images, .app-content {
+    max-width: 100%;
+    margin: 10px 0;
+  }
+  .app-images img {
+    width: 10% !important;
+    height: 90px;
+    object-fit: cover;
+  }
+  .app-store-logo {
+    width: 30%;
+    margin: 10px 0;
+  }
+  .app-store-buttons {
+    /* margin: 20px 20px; */
+    /* display: flex; */
+    height: 50px;
+    width: 50px;
+  }
+  .Android-play-store{
+    height: 43px !important;
+    width: auto;
+    margin: -5px 10px ;
+    
+   }
+    
+   .ios-play-store{
+    height: 40px;
+    width: auto;
+    margin: 0 5px;
+    /* margin-right: 50px; */
+   }
+  .Android-play-store {
+    margin-left: -5px;
+  }
+}
+
   /* Mobile styles (max-width: 480px) */
   @media (max-width: 480px) {
     .app-info {
       flex-direction: column;
       align-items: center;
       width: 100%;
+      height: 60%;
       padding: 10px;
     }
     .app-images, .app-content {
       max-width: 100%;
       margin: 10px 0;
+    
     }
+    .app-images img {
+      max-width: 100%; /* Ensuring the image scales down appropriately */
+      margin-right: 65%;
+      
+    }
+    .app-store-buttons {
+      margin: 20px 20px;
+      display: flex;
+      text-align: center;
+    }
+     .Android-play-store{
+      height: 43px !important;
+      width: auto;
+      margin: -5px 10px ;
+      
+     }
+      
+     .ios-play-store{
+      height: 40px;
+      width: auto;
+      margin: 0 5px;
+      /* margin-right: 50px; */
+     }
     .app-content p, .app-content li {
       font-size: 14px;
     }
