--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -57,8 +57,9 @@
 .nav-element {
   margin-left: 40px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 650;
+  font-weight: 600;
   position: relative; /* Required for positioning the pseudo-element */
+  color: #000;
 }
 
 .nav-element::after {
